@@ -20,6 +20,9 @@ Denton:
 - Progressive saving of JPG.
 - Lib EXIF support
 - FITS support
+- D language support
+- Fortran support
+- JP2 and EXR loading from file streams.
 
 
 For 1.7.0
