@@ -1,4 +1,4 @@
-#include "IL/config.h"
+#include <IL/config.h>
 
 #ifdef ALTIVEC_GCC
 #include "altivec_typeconversion.h"
